--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "name": "passop",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint .",
+      "preview": "vite preview"
+    },
+    "dependencies": {
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-toastify": "^11.0.2",
+      "uuid": "^11.0.3"
+    },
+    "devDependencies": {
+      "@eslint/js": "^9.17.0",
+      "@types/react": "^18.3.17",
+      "@types/react-dom": "^18.3.5",
+      "@vitejs/plugin-react": "^4.3.4",
+      "autoprefixer": "^10.4.20",
+      "eslint": "^9.17.0",
+      "eslint-plugin-react": "^7.37.2",
+      "eslint-plugin-react-hooks": "^5.0.0",
+      "eslint-plugin-react-refresh": "^0.4.16",
+      "globals": "^15.13.0",
+      "postcss": "^8.4.49",
+      "tailwindcss": "^3.4.17",
+      "vite": "^6.0.3"
+    }
   }
-}
